--- a/build.gradle
+++ b/build.gradle
@@ -13,3 +13,18 @@ dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
     compile 'org.jsoup:jsoup:1.10.3'
 }
+
+jar {
+    manifest {
+        attributes 'Implementation-Title': 'DiningHallMenuScraper',
+                'Implementation-Version': version
+    }
+}
+
+uploadArchives {
+    repositories {
+        flatDir {
+            dirs 'jars'
+        }
+    }
+}
